--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ nav div {
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 2rem;
+    margin-top: 6rem;
 }
 
 .card {
@@ -122,6 +123,16 @@ nav div {
     font-weight: 300;
 }
 
+.creations {
+    position: relative;
+}
+
+.creations h2 {
+    text-align: left;
+    position: absolute;
+    top: 0px;
+}
+
 .creations h2 {
     font-size: 2rem;
     font-family: "josefin";
@@ -135,6 +146,7 @@ nav div {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    margin-bottom: 6rem;
 }
 
 /* Footer section */
@@ -180,7 +192,6 @@ footer .logo {
 button {
     padding: 0.8rem 3rem;
     background-color: var(--color_white);
-    margin-bottom: 5rem;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
 }
@@ -219,18 +230,19 @@ button {
         padding: 2rem;
     }
 
-    .creations h2 {
-        text-align: left;
-    }
-
     .create {
         flex-direction: column;
         align-items: flex-end;
     }
 
+    .creations h2 {
+        text-align: left;
+    }
+
     .cardcontainer {
         flex-direction: row;
         flex-wrap: wrap;
+        padding-top: 0;
     }
 
     .cardcontainer .card {
