--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,22 +156,23 @@ header .menu input[type="checkbox"]:checked~label>img {
     position: relative;
 }
 
-.card div:first-child {
+.card div:last-child {
     position: absolute;
     font-size: 2rem;
     color: var(--color_white);
-    left: 2rem;
-    bottom: 2rem;
+    width: calc(100% - 3rem);
+    left: 1.5rem;
+    bottom: 1.5rem;
     text-transform: uppercase;
     font-family: "josefin";
     font-weight: 300;
 }
 
-.card:hover {
-    filter: brightness(2.0) grayscale(1.0) sepia(1.0);
+.card:hover div:first-child {
+    filter: brightness(1.5) grayscale(1.0) contrast(0.3) sepia(1.0);
 }
 
-.card:hover+.card div:first-child {
+.card:hover div:last-child {
     color: var(--color_black);
 }
 
