--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,7 @@ header .menu input[type="checkbox"]:checked~label>img {
 
 .card:hover div:last-child {
     color: var(--color_black);
+    font-weight: 400;
 }
 
 .creations {
